lwcBundle/main/default/objects/Move_Event__e/Move_Event__e.object-meta.xml
<CustomObject>
    <label>Move Event</label>
    <pluralLabel>Move Events</pluralLabel>
</CustomObject>