lwcBundle/main/default/objects/Move_Event__e/fields/Box__c.field-meta.xml
<CustomField>
    <fullName>Box__c</fullName>
    <label>Box</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>