lwcBundle/main/default/objects/Move_Event__e/fields/Game__c.field-meta.xml
<CustomField>
    <fullName>Game__c</fullName>
    <description>Id of current Game being played</description>
    <label>Game</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>