lwcBundle/main/default/objects/Move_Event__e/fields/Letter__c.field-meta.xml
<CustomField>
    <fullName>Letter__c</fullName>
    <description>X or O</description>
    <label>Letter</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>